--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ redcarpet:
 url: http://candeladiao.github.io/
 permalink: /:year/:month/:title/
 owner:
-    name: #
-    twitter: #
-    github: #
+    name: candeladiao
+    facebook: 100007171876823
+    github: candeladiao
     disqus_shortname: #
 
 ga_id: #
