--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ owner:
     name: candeladiao
     facebook: 100007171876823
     github: candeladiao
+    linkedin: 424377198
     disqus_shortname: #
 
 ga_id: #
